Changed the link to link  the form

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </select>
             </div>
             <div class = "nav-sign border">
-                <p><span class = "f"><a href = "C:\Users\Saket\OneDrive\Desktop\HTML\Project\Amazon\Form.html" target = "_blank">Hello, sign in</a></span></p>
+                <p><span class = "f"><a href = ".\Form.html" target = "_blank">Hello, sign in</a></span></p>
                 <p class = "nav2">Account & Lists</p>
             </div>    
             <div class = "nav-return border">
